Map crée + Button fait a 40%

--- a/ProjetVR/Config/DefaultEngine.ini
+++ b/ProjetVR/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Scene/Home.Home
 EditorStartupMap=/Game/Scene/Home.Home
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_Default
@@ -201,4 +202,8 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/OculusHMD.UOculusHMDRuntimeSettings]
+HandTrackingSupport=ControllersAndHands
+HandTrackingFrequency=LOW
 
