--- a/ProjetVR/ProjetVR.uproject
+++ b/ProjetVR/ProjetVR.uproject
@@ -20,6 +20,14 @@
 				"Android",
 				"HoloLens"
 			]
+		},
+		{
+			"Name": "OculusVR",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64",
+				"Android"
+			]
 		}
 	]
 }
